--- a/css/home.css
+++ b/css/home.css
@@ -62,17 +62,10 @@ nav ul li a:hover::after {
 
 img {
   display: inline-block;
-  float: right;
 }
 
 .bg-img {
   margin: 50px 50px 36px 47px;
-
-  input[type=text],
-  input[type=password] {
-    width: 200px;
-    /* Set the desired width */
-  }
 }
 
 .bg-img a {
@@ -92,6 +85,8 @@ img {
 
 /* Add styles to the form container */
 .container {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   right: 0;
   margin: 20px;
@@ -101,19 +96,30 @@ img {
 
 }
 
-/* Full-width input fields */
-input[type=text],
-input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: black;
+.field {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 25px;
 }
 
-input[type=text]:focus,
-input[type=password]:focus {
-  background-color: white;
+.field label {
+  margin-bottom: 12px;
+}
+
+/* Full-width input fields */
+.inp {
+  border-radius: 7px;
+  /* width: 100%; */
+  padding: 12px;
+  margin: 5px 0 22px 0;
+  border: none;
+  /* background: black; */
+}
+
+.inp:focus {
+  /* background-color: white; */
   outline: none;
 }
 
@@ -122,7 +128,7 @@ input[type=password]:focus {
   background-color: #04AA6D;
   color: white;
   padding: 16px 20px;
-  border: none;
+  border: 20%;
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
@@ -143,6 +149,57 @@ input[type=password]:focus {
 
 }
 
-newUser a:hover {
+.newUser a:hover {
   color: #8f8a8a;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  background-color: beige;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 5px;
+  color: black;
+}
+
+#feedbackForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10
+}
+
+#feedbackForm {
+  display: flex;
+  flex-direction: column;
+  gap: 20;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
